crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__helpers__templatetags__captureas.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities: {}
block_specs:
  "src.pretix.helpers.templatetags.captureas::tag::captureas":
    end_tag: endcaptureas
    intermediates: []
    opaque: false
