crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__helpers__templatetags__date_fast.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.helpers.templatetags.date_fast::filter::date_fast":
    expects_arg: true
    arg_optional: true
block_specs: {}
