crates/djls-semantic/tests/snapshots/corpus__repos__pretix__src__pretix__helpers__templatetags__expiresformat.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "src.pretix.helpers.templatetags.expiresformat::filter::format_expires":
    expects_arg: false
    arg_optional: false
block_specs: {}
